--- a/index.html
+++ b/index.html
@@ -616,7 +616,8 @@ if you have any questions, don't hasitate be sure to ask
             <div class="eight columns">
 
                <!-- form -->
-               <form action="localhost:3000/sendMessage" method="post" id="contactForm" name="contactForm">
+               <!-- https://edgarcv.herokuapp.com/sendMessage -->
+               <form action="/sendMessage" method="get" id="contactForm" name="contactForm">
 					<fieldset>
 
                   <div>
@@ -640,7 +641,7 @@ if you have any questions, don't hasitate be sure to ask
                   </div>
 
                   <div>
-                     <input type="submit"  value="Submit" class="submit" />
+                     <button class="submit" value="Submit" ></button>
                      <span id="image-loader">
                         <img alt="" src="images/loader.gif">
                      </span>
@@ -720,15 +721,12 @@ if you have any questions, don't hasitate be sure to ask
             <ul class="social-links">
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
+               <li>&copy; Copyright 2019 CV</li>
                <li>Design by <a href="http://www.styleshout.com/" title="Styleshout" target="_blank">Styleshout</a></li>   
             </ul>
 
