--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@ if you have any questions, don't hasitate be sure to ask
                   </div>
 
                   <div>
-                     <button class="submit" value="Submit" ></button>
+                     <button class="submit">Send</button>
                      <span id="image-loader">
                         <img alt="" src="images/loader.gif">
                      </span>
