--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   <li><span class="bar-expand nodejs"></span><em>Nodejs</em></li>
                   <em style="font: 15px 'opensans-bold', sans-serif; color: #313131; text-transform: uppercase; letter-spacing: 2px;">React</em>
                   <li><input type="range" onchange="changeReactSkill(this.value)" id="slider" min="1" max="100" value="30"></input><em>Reactjs</em></li>	
-                  <span id="ReactSkillMessage">You can raise or lower, if you raise you will help Edgar quickly learn the react</span>					
+                  <span id="ReactSkillMessage">You can increase or decrease, if you raise you will help Edgar quickly learn the react</span>					
 					</ul>
 
 				</div><!-- end skill-bars -->
