--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@ if(e > 60){
       ReactSkillMessage.style = "color: green"
    }
    else{
-      ReactSkillMessage.innerHTML = "You can raise or lower, if you raise you will help Edgar quickly learn the react";
+      ReactSkillMessage.innerHTML = "You can increase or decrease, if you raise you will help Edgar quickly learn the react";
       ReactSkillMessage.style = "color: red";
 
    }
